--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="icon" type="image/png" href="/gobot-logo.png" />
     <title>GoBot - AI Interview Assistant</title>
     <meta name="description" content="Transform your interview preparation with GoBot, the AI-powered interview assistant" />
